--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Main2"
     >
+<!--
     <TextView
         android:id="@+id/banner"
         android:layout_width="match_parent"
@@ -20,49 +21,57 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="50dp"
         />
+       -->
+
+    <ImageView
+        android:id="@+id/banner"
+        android:layout_width="236dp"
+        android:layout_height="236dp"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/logo"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="380dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_width="356dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="40dp"
         android:ems="10"
         android:hint="email address"
         android:inputType="textEmailAddress"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/banner"
-        />
+        app:layout_constraintTop_toBottomOf="@id/banner" />
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="380dp"
-        android:layout_height="wrap_content"
+        android:layout_width="356dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/email"
-        android:layout_marginTop="30dp"
-        />
+        app:layout_constraintTop_toBottomOf="@id/email" />
 
     <Button
         android:id="@+id/signIn"
-        android:layout_width="380dp"
-        android:layout_height="70dp"
+        android:layout_width="315dp"
+        android:layout_height="53dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="#0ED6B9"
+        android:backgroundTint="#A6B0B8"
         android:text="Login"
         android:textColor="@color/black"
-        android:textSize="26sp"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/password"
-        />
+        app:layout_constraintTop_toBottomOf="@id/password" />
 
     <TextView
         android:id="@+id/forgotPassword"
