--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".RegisterUser">
 
+    <!--
     <TextView
         android:id="@+id/banner"
         android:layout_width="match_parent"
@@ -20,10 +21,20 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="50dp"
         />
+        -->
+    <ImageView
+        android:id="@+id/banner"
+        android:layout_width="236dp"
+        android:layout_height="236dp"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/logo"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="380dp"
+        android:layout_width="356dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:ems="10"
@@ -37,9 +48,9 @@
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="380dp"
+        android:layout_width="356dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="25dp"
         android:ems="10"
         android:hint="password"
         android:inputType="textPassword"
@@ -51,13 +62,13 @@
 
     <Button
         android:id="@+id/registerUser"
-        android:layout_width="380dp"
-        android:layout_height="70dp"
+        android:layout_width="315dp"
+        android:layout_height="53dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="#0ED6B9"
+        android:backgroundTint="#A6B0B8"
         android:text="Register"
         android:textColor="@color/black"
-        android:textSize="26sp"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
