--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,11 @@
         android:layout_height="wrap_content"
         android:text="@string/app_name"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ready for splash screen"/>
+
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
